# wattzo-bespaarplan-agent

./: .dockerignore  .env.example  .env.local.example  .gitignore  .mcp.json  Dockerfile  GITHUB_SETUP.md  README.md  fastagent.config.render.yaml  fastagent.config.yaml  fill_bespaarplan_template.py  filled_bespaarplan_van_der_starre.html  push-to-github.sh  pyproject.toml  render.yaml  requirements.txt  run_api.py  start_mcp_servers.sh
.claude/prompts/: generate-bespaarplan-hybrid.md  generate-bespaarplan-improved.md  generate-bespaarplan-phase4.md  generate-bespaarplan-streamlined.md  generate-bespaarplan.md
agents/: __init__.py  main.py
agents/storage/: __init__.py  supabase_storage.py
api/: __init__.py  main.py
mcp-servers/calculation-engine/: requirements.txt  server.py
mcp-servers/energy-data/: server.py
mcp-servers/supabase-storage/: server.py
mcp-servers/template-provider/: requirements.txt  server.py
mcp-servers/template-provider/templates/: bespaarplan_magazine.html
prompts/: README.md  bespaarplan_generator.md
src/wattzo_bespaarplan_agent/: __init__.py
