[project]
name = "wattzo-bespaarplan-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "goxl-wtf", email = "giano@live.nl" }
]
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "fast-agent-mcp[cli]>=0.2.35",
    "fastapi>=0.115.14",
    "fastmcp>=2.9.2",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "requests>=2.32.4",
    "supabase>=2.16.0",
    "uvicorn>=0.34.3",
]

[project.scripts]
wattzo-bespaarplan-agent = "wattzo_bespaarplan_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
